@@ -4,12 +4,13 @@ import com.mile.exception.message.ErrorMessage;
 import com.mile.exception.model.ForbiddenException;
 import com.mile.exception.model.NotFoundException;
 import com.mile.moim.domain.Moim;
+import com.mile.moim.domain.popular.MoimCuriousPost;
 import com.mile.moim.service.dto.response.MoimCuriousPostListResponse;
 import com.mile.moim.service.dto.response.MoimMostCuriousPostResponse;
 import com.mile.post.domain.Post;
 import com.mile.post.repository.PostRepository;
 import com.mile.topic.domain.Topic;
-import com.mile.utils.SecureUrlUtil;
+import com.mile.common.utils.SecureUrlUtil;
 import com.mile.writername.domain.WriterName;
 import com.mile.writername.service.WriterNameRetriever;
 import lombok.RequiredArgsConstructor;
@@ -78,14 +79,6 @@ public class PostRetriever {
         return postList;
     }
 
-    public void authenticateUserWithPostId(
-            final Long postId,
-            final Long userId
-    ) {
-        Post post = findById(postId);
-        authenticateUserWithPost(post, userId);
-    }
-
     public void authenticateUserWithPost(
             final Post post,
             final Long userId
@@ -134,19 +127,10 @@ public class PostRetriever {
         List<Post> postList = getPostHaveCuriousCount(postRepository.findTop2ByMoimOrderByCuriousCountDesc(moim));
         return MoimCuriousPostListResponse.of(postList
                 .stream()
-                .map(p ->
-                        MoimMostCuriousPostResponse.of(p.getIdUrl(), p.getImageUrl(), p.getTopic().getContent(), p.getTitle(), p.getContent(), p.isContainPhoto())
-                ).collect(Collectors.toList()));
+                .map(p->MoimMostCuriousPostResponse.of(MoimCuriousPost.of(p))
+                ).toList());
     }
 
-    public MoimCuriousPostListResponse getMostCuriousPostByMoimForTotal(final Moim moim) {
-        List<Post> postList = getPostHaveCuriousCount(postRepository.findTop2ByMoimOrderByCuriousCountDesc(moim));
-        return MoimCuriousPostListResponse.of(
-                postList.stream()
-                        .map((p ->
-                        MoimMostCuriousPostResponse.of(p.getIdUrl(), p.getImageUrl(), p.getTopic().getContent(), p.getTitle(), p.getContent(), p.isContainPhoto())
-                )).toList());
-    }
 
     public int findPostCountByWriterNameId(
             final Long writerNameId
@@ -161,5 +145,4 @@ public class PostRetriever {
                 .flatMap(topic -> postRepository.findByTopic(topic).stream())
                 .collect(Collectors.toList());
     }
-
 }
